--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-DateTime::Calendar::FrenchRevolutionary version 0.10
+DateTime::Calendar::FrenchRevolutionary version 0.12
 ====================================================
 
 DateTime::Calendar::FrenchRevolutionary is copyright (c) 2003,
-2004, 2010, 2011, 2012 Jean Forget
+2004, 2010, 2011, 2012, 2014 Jean Forget
 
 
 This is  a companion module  to DateTime.pm. It implements  the French
