--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension DateTime::Calendar::FrenchRevolutionary.
 
 0.12  xxx Frimaire CCXXIII (also known as xxx 2014-12-xx)
+        - add the GPL-mandated comments in all Perl code files
 
 0.11  Octidi 18 Brumaire CCXXI, jour de la dentelaire, 213th anniversary of Bonaparte's coup (also known as Thursday 2012-11-08)
         - French locale: replacing the "4" and "5" "possible genre" indicators for feasts by "0" 
