--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension DateTime::Calendar::FrenchRevolutionary.
 
-0.12  xxx Frimaire CCXXIII (also known as xxx 2014-12-xx)
+0.12  Octidi 28 Frimaire CCXXIII, jour de la Truffe (also known as Thursday 2014-12-18)
         - add the GPL-mandated comments in all Perl code files
         - fix RT ticket 100311: produce real UTF-8 strings, instead of Mojibake ISO-8859 which
           will accidently display in a UTF-8 terminal as a proper string.
