--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension DateTime::Calendar::FrenchRevolutionary.
 
-0.13  xxx CCXXIII (also known as xxx 2015-xx-xx)
+0.13  xxx CCXXV (also known as xxx 2016-xx-xx)
+        - fix RT ticket 117246: compatibility with perl-2.25, add a backslash to escape a literal brace in a regexp
 
 0.12  Octidi 28 Frimaire CCXXIII, jour de la Truffe (also known as Thursday 2014-12-18)
         - add the GPL-mandated comments in all Perl code files
