--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension DateTime::Calendar::FrenchRevolutionary.
 
-0.14  xxx CCXXV, jour de xxx
+0.14  Primidi 11 Frimaire CCXXV, jour de la cire, 212th anniversary of Napoleon's crowning, 211th anniversary of the Battle of Austerlitz (or Thursday 2016-12-01)
+        - fix a few typos
+        - Makefile.PL no longer uses Module::Build
+        - add Params::Validate as a prerequisite
 
 0.13  Octidi 18 Brumaire CCXXV, jour de la dentelaire, 217th anniversary of Bonaparte's coup (also known as Tuesday 2016-11-08)
         - fix RT ticket 117246: compatibility with perl-5.25, add a backslash to escape a literal brace in a regexp
