New version number

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension DateTime::Calendar::FrenchRevolutionary.
 
+0.15  xxx
+
 0.14  Primidi 11 Frimaire CCXXV, jour de la cire, 212th anniversary of Napoleon's crowning, 211th anniversary of the Battle of Austerlitz (or Thursday 2016-12-01)
         - fix a few typos
         - Makefile.PL no longer uses Module::Build
