--- a/TODO
+++ b/TODO
@@ -6,3 +6,4 @@ printf specifiers C<%V>, C<%w>
 
 Install the other F<DateTime::Calendar> modules and use them in the F<today> example
 
+Add more locales, such as Italian or Spanish
