--- a/README
+++ b/README
@@ -47,10 +47,6 @@ That's all!
 
 LICENSE INFORMATION
 
-This module  is free software; you  can redistribute it  and modify it
-under the  same terms as Perl  5.16.3. For more details,  see the full
-text of the licenses in the directory LICENSE.
-
 This program is distributed in the hope that it will be useful, but it
 is provided “as is” and without any express or implied warranties. For
-details, see the full text of the license in the file LICENSE.
+details, see the full text of the license in the file F<LICENSE>.
