Last change before release of version 0.16.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension DateTime::Calendar::FrenchRevolutionary.
 
-0.16  xxx
+0.16  Septidi 17 Germinal CCXXIX, jour du mélèze, 227th anniversary of the execution of Fabre d'Églantine (or Tuesday 2021-04-06)
         - add an Italian and a Spanish locales (thank you again Gérald)
         - a few documentation fixes.
 
