New version number: 0.18.

--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Revision history for Perl extension DateTime::Calendar::FrenchRevolutionary.
 
-0.17  xxx
-        - xxx
+0.18  xxx
+        - yyy
+
+0.17  Septidi 17 Germinal CCXXIX, jour du mélèze, 227th anniversary of the beheading of Fabre d'Églantine, Danton and Desmoulins (or Tuesday 2021-04-06)
+        - fix the kwalitee errors of version 0.16.
 
 0.16  Septidi 17 Germinal CCXXIX, jour du mélèze, 227th anniversary of the execution of Fabre d'Églantine (or Tuesday 2021-04-06)
         - add an Italian and a Spanish locales (thank you again Gérald)
